# mkdocs-pills

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
demo/: mkdocs.yml
demo/docs/: index.md
mkdocs_plugin_pills/: pills.css  plugin.py  regex.py  unicode.py
